--- a/hello-world.html
+++ b/hello-world.html
@@ -14,6 +14,9 @@
 		<button id="search">Search</button>
 		<button id="reset">Reset</button>
 	</div>
+	<ul id="results">
+		
+	</ul>
 	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </body>
